--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		
 			<a-entity gltf-model="#animated-test" 
 			rotation="0 180 0" scale="0.15 0.15 0.15"
-			gps-entity-place="longitude: -79.50556194953222; latitude: 43.77236620318983;" 
+			gps-entity-place="longitude: -79.505451; latitude: 43.772214;" 
 			animation-mixer="loop: repeat"/>
 	
 	  		<a-camera gps-camera rotation-reader></a-camera>
