--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			animation-mixer="loop: repeat"/>
 	
 	  		<a-camera gps-camera rotation-reader></a-camera>
+			<a-box color="yellow" gps-entity-place="latitude: 43.772214; longitude: -79.505451"/>
 
 		</a-scene>
 	</body>
